src/javaCC/CasperParser.java
/* CasperParser.java */
/* Generated By:JavaCC: Do not edit this line. CasperParser.java */
package javaCC;
import model.msg.*;
import model.spec.*;
import model.*;
import java.util.*;
public class CasperParser implements CasperParserConstants {

    public static void main(String [] args){
        CasperParser parser;
        if(args.length == 0){
            System.out.println("CasperParser: Reading from Standard Input...");
            parser = new CasperParser(System.in);
        }
        else if(args.length == 1){
            System.out.println("CasperParser: Reading from file " + args[0] + "...");
            try{
                parser = new CasperParser(new java.io.FileInputStream(args[0]));
            }
            catch(java.io.FileNotFoundException e){
                System.out.println("CasperParser: File " + args[0] + "  not found");
                return;
            }
        }
        else{
        System.out.println("CasperParser: Usage is one of : ");
        System.out.println("\u005ct\u005ct java CasperParser < inputFile");
        System.out.println("OR");
        System.out.println("\u005ct\u005ct java CasperParser inputFile");
        return;
        }

        try{
            Protocol p = parser.script();

        }
        catch(ParseException e){
            System.out.print(e.getMessage());
        }


    }

    public static String stringify(ArrayList<String> values){
        StringBuilder builder = new StringBuilder();
        for(String str: values){
            builder.append(str);
        }
        return builder.toString();
    }

// Grammar Prod Rules

// Basic Def
  final public 
String atom() throws ParseException {Token t; String s;
    if (jj_2_1(2)) {
      s = fn_app();
{if ("" != null) return s;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ID:{
        t = jj_consume_token(ID);
{if ("" != null) return t.image;}
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public String fn_app() throws ParseException {Token t;StringBuilder builder = new StringBuilder();
    t = jj_consume_token(ID);
builder.append(t.image);
    t = jj_consume_token(L_PAREN);
builder.append(t.image);
    t = jj_consume_token(ID);
builder.append(t.image);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      t = jj_consume_token(COMMA);
builder.append(t.image);
      t = jj_consume_token(ID);
builder.append(t.image);
    }
    t = jj_consume_token(R_PAREN);
builder.append(t.image); {if ("" != null) return builder.toString();}
    throw new Error("Missing return statement in function");
  }

  final public Message msg() throws ParseException {Token t; Message m; MessageList messagelist;
messagelist = new MessageList();
    m = cpt();
messagelist.getMessageList().add(m);
    label_2:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_2;
      }
      t = jj_consume_token(COMMA);
      m = cpt();
messagelist.getMessageList().add(m);
    }
if(messagelist.getMessageList().size() == 1){
            {if ("" != null) return messagelist.getMessageList().get(0);}
        }
        {if ("" != null) return messagelist;}
    throw new Error("Missing return statement in function");
  }

  final public Message cpt() throws ParseException {Token tok = null; Message m = null; Message t;
    if (jj_2_3(2)) {
      tok = jj_consume_token(ID);
      jj_consume_token(MOD);
      t = term();
{if ("" != null) return new Forward(tok.image, t);}
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ID:
      case L_PAREN:
      case L_BRACE:{
        t = term();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case MOD:{
          tok = jj_consume_token(MOD);
          m = msgAtom();
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          ;
        }
if(tok == null){
                {if ("" != null) return t;}
            }
            {if ("" != null) return new Forward(t.toString(),m);}
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public Message term() throws ParseException {Token t = null; Message atomMessage; Message termMessage = null;
    atomMessage = msgAtom();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case XOR:{
      t = jj_consume_token(XOR);
      termMessage = term();
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      ;
    }
if(t == null){
            {if ("" != null) return atomMessage;}
        }
        {if ("" != null) return new Xor(atomMessage,termMessage);}
    throw new Error("Missing return statement in function");
  }

  final public Message msgAtom() throws ParseException {Token t; Token t1 = null; Token t2 = null;  Message m = null; Message k;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ID:{
      t = jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case L_PAREN:{
        t1 = jj_consume_token(L_PAREN);
        m = msg();
        t2 = jj_consume_token(R_PAREN);
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        ;
      }
if(t1 == null){
                {if ("" != null) return new Atom(t.image);}
            }
            if (m instanceof Atom){
                Atom paren = (Atom)m;
                {if ("" != null) return new Atom(t.image + t1.image + paren.getVarName() + t2.image );}
            }
            {if ("" != null) return new Atom(t.image);}
      break;
      }
    case L_BRACE:{
      jj_consume_token(L_BRACE);
      m = msg();
      jj_consume_token(R_BRACE);
      jj_consume_token(L_BRACE);
      k = cpt();
      jj_consume_token(R_BRACE);
if(m instanceof MessageList){
            {if ("" != null) return new Encrypt(k,(MessageList)m);}
        }
            MessageList msgList = new MessageList();
            msgList.getMessageList().add(m);
            {if ("" != null) return new Encrypt(k,msgList);}
      break;
      }
    case L_PAREN:{
      t = jj_consume_token(L_PAREN);
      m = msg();
      t = jj_consume_token(R_PAREN);
{if ("" != null) return m;}
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Token type_name() throws ParseException {Token t;
    t = jj_consume_token(ID);
{if ("" != null) return t;}
    throw new Error("Missing return statement in function");
  }

  final public Token process_name() throws ParseException {Token t;
    t = jj_consume_token(ID);
{if ("" != null) return t;}
    throw new Error("Missing return statement in function");
  }

  final public Protocol script() throws ParseException {Protocol p = new Protocol(); ArrayList<Message> messages = new ArrayList(); Intruder i;
    free_vars();
    processes();
    messages = prot_desc();
    spec_section();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case EQ:{
      equivalences();
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    actual_vars();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case FUNCS:{
      functions();
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    system();
    i = intruder();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CHANNELS:{
      channels();
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    jj_consume_token(0);
p.setIntruder(i); p.setMessages(messages); {if ("" != null) return p;}
    throw new Error("Missing return statement in function");
  }

  final public void free_vars() throws ParseException {
    jj_consume_token(FREE_VARS);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INVERSE_KEYS:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ID:{
        var_dec();
        break;
        }
      case INVERSE_KEYS:{
        inv_keys_dec();
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void var_dec() throws ParseException {
    jj_consume_token(ID);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        break label_4;
      }
      jj_consume_token(COMMA);
      jj_consume_token(ID);
    }
    jj_consume_token(COLON);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ID:{
      type_expr();
      break;
      }
    case TIMESTAMP:{
      jj_consume_token(TIMESTAMP);
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case L_SQUARE:{
      subtype_expr();
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      ;
    }
  }

  final public void subtype_expr() throws ParseException {
    jj_consume_token(L_SQUARE);
    jj_consume_token(ID);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        break label_5;
      }
      jj_consume_token(COMMA);
      jj_consume_token(ID);
    }
    jj_consume_token(R_SQUARE);
  }

  final public void type_expr() throws ParseException {
    type_name();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case X:
    case ARROW:{
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case X:{
          ;
          break;
          }
        default:
          jj_la1[16] = jj_gen;
          break label_6;
        }
        jj_consume_token(X);
        type_name();
      }
      jj_consume_token(ARROW);
      type_name();
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      ;
    }
  }

  final public void inv_keys_dec() throws ParseException {
    jj_consume_token(INVERSE_KEYS);
    inv_key_pair();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        break label_7;
      }
      jj_consume_token(COMMA);
      inv_key_pair();
    }
  }

  final public void inv_key_pair() throws ParseException {
    jj_consume_token(L_PAREN);
    jj_consume_token(ID);
    jj_consume_token(COMMA);
    jj_consume_token(ID);
    jj_consume_token(R_PAREN);
  }

  final public void processes() throws ParseException {
    jj_consume_token(PROCESSES);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        break label_8;
      }
      process_def();
    }
  }

  final public void process_def() throws ParseException {Token t;
    process_name();
    jj_consume_token(L_PAREN);
    jj_consume_token(ID);
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        break label_9;
      }
      jj_consume_token(COMMA);
      jj_consume_token(ID);
    }
    jj_consume_token(R_PAREN);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case KNOWS:{
      knows_stmt();
      break;
      }
    default:
      jj_la1[21] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case GENERATES:{
      gen_stmt();
      break;
      }
    default:
      jj_la1[22] = jj_gen;
      ;
    }
  }

  final public void knows_stmt() throws ParseException {
    jj_consume_token(KNOWS);
    atom();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[23] = jj_gen;
        break label_10;
      }
      jj_consume_token(COMMA);
      atom();
    }
  }

  final public void gen_stmt() throws ParseException {
    jj_consume_token(GENERATES);
    jj_consume_token(ID);
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[24] = jj_gen;
        break label_11;
      }
      jj_consume_token(COMMA);
      jj_consume_token(ID);
    }
  }

  final public ArrayList<Message> prot_desc() throws ParseException {ArrayList<Message> messages = new ArrayList(); Message m;
    jj_consume_token(PROT_DESC);
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LINE_NO:
      case LESS_THAN:{
        ;
        break;
        }
      default:
        jj_la1[25] = jj_gen;
        break label_12;
      }
      if (jj_2_4(3)) {
        m = prot_msg();
messages.add(m);
      } else if (jj_2_5(3)) {
        m = env_msg_send();
messages.add(m);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LINE_NO:
        case LESS_THAN:{
          m = env_msg_rec();
messages.add(m);
          break;
          }
        default:
          jj_la1[26] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
{if ("" != null) return messages;}
    throw new Error("Missing return statement in function");
  }
